# logX

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_and_test.sh  example.cpp  logX.cpp  logger.conf
example/: example.cpp
include/logX/: logger.h
include/logX/hooks/: file_hook.h  log_hook.h
src/: logger.cpp  logger.h  spsc.h  spsc_impl.h
src/config/: config.cpp  config.h
src/hooks/: console_hook.h
tests/: CMakeLists.txt  logger_tests.cpp
